restructure project filesystem

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
                 <ul class="navbar-nav search-right mt-lg-0 mt-2">
                     <li class="nav-item" title="Search"><a href="#search" class="search-search">
                             <span class="fas fa-search" aria-hidden="true"></span></a></li>
-                    <li class="nav-item me-lg-3"><a href="/public/dashboard/pages-login.html"
+                    <li class="nav-item me-lg-3"><a href="pages-login.html"
                             class="phone-btn btn btn-primary btn-style d-none d-lg-block btn-style ms-2">Login</a></li>
                 </ul>
             </nav>
@@ -311,9 +311,9 @@
                         </div>
                         <!-- <p class="mt-md-4 mt-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam</p> -->
                         <div class="w3l-two-buttons">
-                            <a href="/public/dashboard/pages-register.html"
+                            <a href="pages-register.html"
                                 class="btn btn-style btn-primary mt-lg-5 mt-4">Sign Up </a>
-                            <a href="/public/dashboard/pages-login.html"
+                            <a href="pages-login.html"
                                 class="btn btn-style btn-white mt-lg-5 mt-4 ms-2">Sign In</a>
                         </div>
                     </div>
