--- a/public/pages-login.html
+++ b/public/pages-login.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/images/favicon.png" rel="icon">
+  <link href="assets/images/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
@@ -45,8 +45,8 @@
             <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
               <div class="d-flex justify-content-center py-4">
-                <a href="index.html" class="logo d-flex align-items-center w-auto">
-                  <img src="assets/img/absa-logo.png" alt="">
+                <a href="pages-login.html" class="logo d-flex align-items-center w-auto">
+                  <img src="assets/images/absa-logo.png" alt="">
                   <span class="d-none d-lg-block">AbsaCapital</span>
                 </a>
               </div><!-- End Logo -->
