"Updated email input group text from '@gmail.com' to '@email.com'"

--- a/public/pages-register.html
+++ b/public/pages-register.html
@@ -77,7 +77,7 @@
                       <label for="yourEmail" class="form-label">Your Email</label>
                       <div class="input-group has-validation">
                         <input type="email" name="email" class="form-control" id="yourEmail" required>
-                        <span class="input-group-text" id="inputGroupPrepend">@gmail.com</span>
+                        <span class="input-group-text" id="inputGroupPrepend">@email.com</span>
 
                       <div class="invalid-feedback">Please enter a valid Email adddress!</div>
                       </div>
