"Updated favicon and apple-touch-icon links to point to absa-logo.png"

--- a/public/pages-register.html
+++ b/public/pages-register.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/images/favicon.png" rel="icon">
-  <link href="assets/images/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/images/absa-logo.png" rel="icon">
+  <link href="assets/images/absa-logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
