--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -638,7 +638,7 @@
 
 
             <!-- Recent Sales -->
-            <div class="col-12">
+            <!-- <div class="col-12">
               <div class="card recent-sales overflow-auto">
 
                 <div class="filter">
@@ -660,7 +660,7 @@
                   <table class="table table-borderless datatable">
                     <thead>
                       <tr>
-                        <!-- <th scope="col">#</th> -->
+                        <th scope="col">#</th>
                         <th scope="col">Customer</th>
                         <th scope="col">Product</th>
                         <th scope="col">Price</th>
@@ -669,35 +669,35 @@
                     </thead>
                     <tbody>
                       <tr>
-                        <!-- <th scope="row"><a href="#">#2457</a></th> -->
+                        <th scope="row"><a href="#">#2457</a></th>
                         <td>Brandon Jacob</td>
                         <td><a href="#" class="text-primary">At praesentium minu</a></td>
                         <td>$64</td>
                         <td><span class="badge bg-success">Approved</span></td>
                       </tr>
                       <tr>
-                        <!-- <th scope="row"><a href="#">#2147</a></th> -->
+                        <th scope="row"><a href="#">#2147</a></th>
                         <td>Bridie Kessler</td>
                         <td><a href="#" class="text-primary">Blanditiis dolor omnis similique</a></td>
                         <td>$47</td>
                         <td><span class="badge bg-warning">Pending</span></td>
                       </tr>
                       <tr>
-                        <!-- <th scope="row"><a href="#">#2049</a></th> -->
+                        <th scope="row"><a href="#">#2049</a></th>
                         <td>Ashleigh Langosh</td>
                         <td><a href="#" class="text-primary">At recusandae consectetur</a></td>
                         <td>$147</td>
                         <td><span class="badge bg-success">Approved</span></td>
                       </tr>
                       <tr>
-                        <!-- <th scope="row"><a href="#">#2644</a></th> -->
+                        <th scope="row"><a href="#">#2644</a></th>
                         <td>Angus Grady</td>
                         <td><a href="#" class="text-primar">Ut voluptatem id earum et</a></td>
                         <td>$67</td>
                         <td><span class="badge bg-danger">Rejected</span></td>
                       </tr>
                       <tr>
-                        <!-- <th scope="row"><a href="#">#2644</a></th> -->
+                        <th scope="row"><a href="#">#2644</a></th>
                         <td>Raheem Lehner</td>
                         <td><a href="#" class="text-primary">Sunt similique distinctio</a></td>
                         <td>$165</td>
@@ -709,8 +709,8 @@
                 </div>
 
               </div>
-            </div>
-            <!-- End Recent Sales -->
+            </div> -->
+            <!--End Recent Sales -->
 
             <!-- Top Selling -->
             <div class="col-12">
