"Updated image paths from 'assets/img' to 'assets/images' in multiple HTML files."

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -555,7 +555,7 @@
                 </div>
 
               </div>
-            </div><!-- End Top Selling -->
+            </div><!-- End Recent Transactions -->
 
           </div>
         </div><!-- End Left side columns -->
