--- a/public/pages-transactions.html
+++ b/public/pages-transactions.html
@@ -39,8 +39,8 @@
 
     <div class="d-flex align-items-center justify-content-between">
       <a href="dashboard.html" class="logo d-flex align-items-center">
-        <img src="assets/images/logo.png" alt="">
-        <span class="d-none d-lg-block">NiceAdmin</span>
+        <img src="assets/images/absa-logo.png">
+        <span class="d-none d-lg-block">AbsaCapital</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
@@ -61,7 +61,7 @@
           </a>
         </li><!-- End Search Icon-->
 
-     
+ 
 
         <li class="nav-item dropdown pe-3">
 
