Update services section to focus on banking offerings
- Revise content to highlight comprehensive banking services
- Adjust headings and paragraphs to emphasize financial solutions
- Update CTA buttons to link to services and contact pages

--- a/public/contact.html
+++ b/public/contact.html
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav me-lg-auto my-2 my-lg-0 navbar-nav-scroll">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link " aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">About</a>
@@ -41,7 +41,7 @@
                         </li>
                        
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
+                            <a class="nav-link active" href="contact.html">Contact</a>
                         </li>
 
                     </ul>
@@ -78,7 +78,7 @@
                 <ul class="navbar-nav search-right mt-lg-0 mt-2">
                     <li class="nav-item" title="Search"><a href="#search"  class="search-search">
                             <span class="fas fa-search" aria-hidden="true"></span></a></li>
-                    <li class="nav-item me-lg-3"><a href="https://absa-capital.vercel.app" class="phone-btn btn btn-primary btn-style d-none d-lg-block btn-style ms-2">Login</a></li>
+                    <li class="nav-item me-lg-3"><a href="/pages-login.html" class="phone-btn btn btn-primary btn-style d-none d-lg-block btn-style ms-2">Login</a></li>
                 </ul>
             </nav>
         </div>
@@ -109,19 +109,17 @@
                     <div class="col-lg-5 cont-details pe-lg-5">
                         <div class="contactct-fm-text text-left">
                             <h6 class="title-subhny">Say Hello</h6>
-                            <h3 class="title-w3l mb-2">Any Question?
-                                <br>
-                                Write Down And Send Us
+                            <h3 class="title-w3l mb-2">Get In Touch
                             </h3>
-                            <p class="mb-sm-5 mb-4">
-                                Neither us nor any of our affiliates will ever ask you for your Social Security number,
-                                account information, passwords or PINs via Facebook or Twitter</p>
+                            <p class="mb-sm-5 mb-4">Start working with Us that can provide everything you need to generate awareness,
+                                drive traffic,
+                                connect.We guarantee that you'll be able to have any issue resolved within 24 hours.</p>
                             <div class="cont-top">
                                 <div class="cont-left text-center">
                                     <span class="fas fa-phone-alt"></span>
                                 </div>
                                 <div class="cont-right">
-                                    <h5>Make a Call</h5>
+                                    <h5>Phone number</h5>
                                     <p><a href="tel:+(21) 255 088 4943">+(21) 255 088 4943</a></p>
                                 </div>
                             </div>
@@ -130,9 +128,8 @@
                                     <span class="fas fa-envelope-open-text"></span>
                                 </div>
                                 <div class="cont-right">
-                                    <h5>Send a Mail</h5>
-                                    <p><a href="mailto:DigitMarkrting@mail.com" class="mail">DigitMarkrting@mail.com</a>
-                                    </p>
+                                    <h5>Send Email</h5>
+                                    <p><a href="mailto:DigitMarkrting@mail.com" class="mail">DigitMarkrting@mail.com</a></p>
                                 </div>
                             </div>
                             <div class="cont-top margin-up">
@@ -140,9 +137,8 @@
                                     <span class="fas fa-map-marker-alt"></span>
                                 </div>
                                 <div class="cont-right">
-                                    <h5>Main Offline</h5>
-                                    <p class="pr-lg-5">Address here, 434 Agency Honey street,<br> London, UK - 62617.
-                                    </p>
+                                    <h5>Office Address</h5>
+                                    <p class="pr-lg-5">Address here, 434 Agency Honey street,<br> London, UK - 62617.</p>
                                 </div>
                             </div>
                         </div>
@@ -150,10 +146,7 @@
                     <div class="col-lg-7 cont-details mt-lg-0 mt-5">
                         <div class="map-content-9">
                             <div class="map-iframe">
-                                <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C+UK!5e0!3m2!1sen!2spl!4v1562654563739!5m2!1sen!2spl"
-                                    width="100%" height="400" frameborder="0" style="border: 0px;"
-                                    allowfullscreen=""></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C+UK!5e0!3m2!1sen!2spl!4v1562654563739!5m2!1sen!2spl" width="100%" height="400" frameborder="0" style="border: 0px;" allowfullscreen=""></iframe>
                             </div>
                         </div>
                     </div>
@@ -209,9 +202,8 @@
 
                                     <span class="sublog">Absa </span>Capital </a></h2>
                         </div>
-                        <p>We appreciate your interest in Absa Capital, <br> Please find below various options to reach us. For our
-                            subsidiary companies’ information.
-
+                        <p>Absa Capital is a leading investment bank, providing innovative financial solutions to help
+                            businesses thrive in today's dynamic market environment. Our expertise drives your success.
                         </p>
                         <div class="w3l-two-buttons mt-4">
                             <a href="#trail" class="btn btn-primary btn-style"> Join Us today </a>
@@ -229,7 +221,7 @@
                             <h6 class="footer-title-29">Quick Links</h6>
                             <li><a href="about.html">Privacy Policy</a></li>
                             <li><a href="blog.html">Terms of Service</a></li>
-                            <li><a href="https://absa-capital.vercel.app">Online Access</a></li>
+                            <li><a href="/pages-login.html">Online Access</a></li>
                             <li><a href="blog.html">FAq</a></li>
 
                         </ul>
