"Added 10 new table rows to pages-transactions.html with various transaction details and statuses."

--- a/public/pages-transactions.html
+++ b/public/pages-transactions.html
@@ -463,6 +463,108 @@
                     <td>$6,004</td>
                     <td><span class="badge bg-danger">Pending</span></td>
                   </tr>
+                  <tr>
+                    <td>23-03-2024</td>
+                    <td class="text-primary-emphasis fw-light">Checking</td>
+                    <td>Monthly Bonus from ABC Inc</td>
+                    <td>Bonus</td>
+                    <td>$6,004</td>
+
+                    <td><span class="badge bg-success">Pending</span></td>
+
+                  </tr>
+                  <tr>
+                    <td>23-03-2024</td>
+                    <td class="text-secondary-emphasis fw-bold">Savings</td>
+                    <td>Gass Refill and PetrolFuel</td>
+                    <td>Transportation</td>
+                    <td>$6,004</td>
+                    <td><span class="badge bg-danger">Pending</span></td>
+                  </tr>
+                  <tr>
+                    <td>23-03-2024</td>
+                    <td class="text-primary-emphasis fw-light">Checking</td>
+                    <td>Descirption here</td>
+                    <td>Medication</td>
+                    <td>$6,004</td>
+                    <td><span class="badge bg-success">Pending</span></td>
+                  </tr>
+                  <tr>
+                    <td>23-03-2024</td>
+                    <td class="text-secondary-emphasis fw-bold">Savings</td>
+                    <td>Savings Interest Payment</td>
+                    <td>Interest</td>
+                    <td>$6,004</td>
+                    <td><span class="badge bg-success">Pending</span></td>
+                  </tr>
+                  <tr>
+                    <td>23-03-2024</td>
+                    <td class="text-primary-emphasis fw-light">Checking</td>
+                    <td>Savings Interest Payment</td>
+                    <td>Interest</td>
+                    <td>$6,004</td>
+                    <td><span class="badge bg-warning">Pending</span></td>
+
+                  </tr>
+                  <tr>
+                    <td>23-03-2024</td>
+                    <td class="text-secondary-emphasis fw-bold">Savings</td>
+                    <td>Descirption here</td>
+                    <td>Medication</td>
+                    <td>$6,004</td>
+                    <td><span class="badge bg-danger">Pending</span></td>
+                  </tr>
+                  <tr>
+                    <td>23-03-2024</td>
+                    <td class="text-primary-emphasis fw-light">Checking</td>
+                    <td>Monthly Bonus from ABC Inc</td>
+                    <td>Bonus</td>
+                    <td>$6,004</td>
+
+                    <td><span class="badge bg-success">Pending</span></td>
+
+                  </tr>
+                  <tr>
+                    <td>23-03-2024</td>
+                    <td class="text-secondary-emphasis fw-bold">Savings</td>
+                    <td>Gass Refill and PetrolFuel</td>
+                    <td>Transportation</td>
+                    <td>$6,004</td>
+                    <td><span class="badge bg-danger">Pending</span></td>
+                  </tr>
+                  <tr>
+                    <td>23-03-2024</td>
+                    <td class="text-primary-emphasis fw-light">Checking</td>
+                    <td>Descirption here</td>
+                    <td>Medication</td>
+                    <td>$6,004</td>
+                    <td><span class="badge bg-success">Pending</span></td>
+                  </tr>
+                  <tr>
+                    <td>23-03-2024</td>
+                    <td class="text-secondary-emphasis fw-bold">Savings</td>
+                    <td>Savings Interest Payment</td>
+                    <td>Interest</td>
+                    <td>$6,004</td>
+                    <td><span class="badge bg-success">Pending</span></td>
+                  </tr>
+                  <tr>
+                    <td>23-03-2024</td>
+                    <td class="text-primary-emphasis fw-light">Checking</td>
+                    <td>Savings Interest Payment</td>
+                    <td>Interest</td>
+                    <td>$6,004</td>
+                    <td><span class="badge bg-warning">Pending</span></td>
+
+                  </tr>
+                  <tr>
+                    <td>23-03-2024</td>
+                    <td class="text-secondary-emphasis fw-bold">Savings</td>
+                    <td>Descirption here</td>
+                    <td>Medication</td>
+                    <td>$6,004</td>
+                    <td><span class="badge bg-danger">Pending</span></td>
+                  </tr>
                 </tbody>
               </table>
 
