--- a/public/pages-transactions.html
+++ b/public/pages-transactions.html
@@ -331,13 +331,13 @@
 
     
 
-      <!-- <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-register.html">
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="pages-accounts.html">
           <i class="bi bi-card-list"></i>
-          <span>Register</span>
+          <span>My Accounts</span>
         </a>
-      </li> -->
-      <!-- End Register Page Nav -->
+      </li>
+      <!-- End Accouns Page Nav -->
 
       <!-- <li class="nav-item">
         <a class="nav-link collapsed" href="pages-login.html">
