"Updated navigation links in pages-accounts.html and user-profile.html"

--- a/public/pages-accounts.html
+++ b/public/pages-accounts.html
@@ -455,7 +455,7 @@
       </li><!-- End Profile Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-faq.html">
+        <a class="nav-link collapsed" href="pages-transactions.html">
           <i class="bi bi-question-circle"></i>
           <span>Transactions</span>
         </a>
@@ -492,12 +492,12 @@
       </li> -->
       <!-- End Error 404 Page Nav -->
 
-      <!-- <li class="nav-item">
-        <a class="nav-link " href="pages-blank.html">
+      <li class="nav-item">
+        <a class="nav-link " href="pages-transfer.html">
           <i class="bi bi-file-earmark"></i>
-          <span>Blank</span>
+          <span>Transfer Funds</span>
         </a>
-      </li> -->
+      </li>
       <!-- End Blank Page Nav -->
 
     </ul>
