--- a/public/user-profile.html
+++ b/public/user-profile.html
@@ -29,13 +29,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: NiceAdmin
-  * Template URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
-  * Updated: Apr 20 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+ 
 </head>
 
 <body>
@@ -474,13 +468,13 @@
         </a>
       </li><!-- End Contact Page Nav -->
 
-      <!-- <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-register.html">
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="pages-accounts.html">
           <i class="bi bi-card-list"></i>
-          <span>Register</span>
+          <span>My Accounts</span>
         </a>
-      </li> -->
-      <!-- End Register Page Nav -->
+      </li> 
+      <!-- End Register Page Nav
 
       <!-- <li class="nav-item">
         <a class="nav-link collapsed" href="pages-login.html">
