--- a/public/user-profile.html
+++ b/public/user-profile.html
@@ -474,23 +474,9 @@
           <span>My Accounts</span>
         </a>
       </li> 
-      <!-- End Register Page Nav
+      <!-- End Register Page Nav-->
 
-      <!-- <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-login.html">
-          <i class="bi bi-box-arrow-in-right"></i>
-          <span>Login</span>
-        </a>
-      </li> -->
-      <!-- End Login Page Nav -->
-
-      <!-- <li class="nav-item">
-        <a class="nav-link collapsed" href="pages-error-404.html">
-          <i class="bi bi-dash-circle"></i>
-          <span>Error 404</span>
-        </a>
-      </li> -->
-      <!-- End Error 404 Page Nav -->
+     
 
       <li class="nav-item">
         <a class="nav-link collapsed" href="pages-transfer.html">
