--- a/public/pages-register.html
+++ b/public/pages-register.html
@@ -110,8 +110,10 @@
               </div>
 
               <div class="credits">
-                          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+
+                Secured by <a href="https://kalibip.online">KaliBlip</a>
               </div>
+
 
             </div>
           </div>
