--- a/public/pages-error-404.html
+++ b/public/pages-error-404.html
@@ -5,13 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pages / Not Found 404 - NiceAdmin Bootstrap Template</title>
-  <meta content="" name="description">
+  <title>Dashboard - Absa Capital</title>  <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/images/favicon.png" rel="icon">
-  <link href="assets/images/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/images/absa-logo.png" rel="icon">
+  <link href="assets/images/absa-logo.png" rel="absa-logo">
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
@@ -43,11 +42,7 @@
         <a class="btn" href="index.html">Back to home</a>
         <img src="assets/images/not-found.svg" class="img-fluid py-5" alt="Page Not Found">
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      <a href="https://bootstrapmade.com/"></a>
         </div>
       </section>
 
