--- a/public/pages-faq.html
+++ b/public/pages-faq.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Pages / F.A.Q - NiceAdmin Bootstrap Template</title>
+  <title> F.A.Q - Absa Capital</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/images/favicon.png" rel="icon">
-  <link href="assets/images/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/images/absa-logo.png" rel="icon">
+  <link href="assets/images/absa-logo.png" rel="absa-logo">
 
   <!-- Google Fonts -->
   <link href="https://fonts.gstatic.com" rel="preconnect">
@@ -36,13 +36,13 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
+   <!-- ======= Header ======= -->
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/images/absa-logo.png" alt="">
-        <span class="d-none d-lg-block">NiceAdmin</span>
+      <a href="dashboard.html" class="logo d-flex align-items-center">
+        <img src="assets/images/absa-logo.png">
+        <span class="d-none d-lg-block">AbsaCapital</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
@@ -64,6 +64,12 @@
         </li><!-- End Search Icon-->
 
 
+        <li class="nav-item ">
+          <p></p>
+          <h6 class="fw-medium text-primary-emphasis"> Account number: <br>
+            <span class="fw-light text-secondary-emphasis">858967656757567</span>
+            </h3>
+        </li>
 
         <li class="nav-item dropdown pe-3">
 
@@ -451,14 +457,10 @@
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="copyright">
-      &copy; Copyright <strong><span>NiceAdmin</span></strong>. All Rights Reserved
+      &copy; Copyright <strong><span>AbsaCapital</span></strong>. All Rights Reserved
     </div>
     <div class="credits">
-      <!-- All the links in the footer should remain intact. -->
-      <!-- You can delete the links only if you purchased the pro version. -->
-      <!-- Licensing information: https://bootstrapmade.com/license/ -->
-      <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/ -->
-      Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+     <a href="https://bootstrapmade.com/"></a>
     </div>
   </footer><!-- End Footer -->
 
