Lucky try : "Updated Firebase imports and refactored dashboard, login, and register JavaScript files"

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -33,13 +33,9 @@
 
   <script type="module" src="assets/js/dashboard.js"></script>
   <script type="module" src="assets/js/firebase.js"></script>
-  <script type="module" src="assets/js/addRandomTransactions.js"></script>
 
 
 
-  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
   
 
 
@@ -316,7 +312,7 @@
 
                       </tr>
                     </thead>
-                    <tbody class="text fw-light">
+                    <tbody class="text fw-light" id="transactions-table-body">
                      
                     
                       <tr>
