Added "type='module'" attribute to script tags in admin.html.

--- a/public/admin.html
+++ b/public/admin.html
@@ -203,9 +203,10 @@
     </div>
   </div>
 
-  <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-firestore.js"></script>
-  <script src="assets/js/admin.js"></script>
+  <script type="module" src="https://www.gstatic.com/firebasejs/9.20.0/firebase-app.js"></script>
+<script type="module" src="https://www.gstatic.com/firebasejs/9.20.0/firebase-auth.js"></script>
+<script type="module" src="https://www.gstatic.com/firebasejs/9.20.0/firebase-firestore.js"></script>
+<script type="module" src="assets/js/admin.js"></script>
+
 </body>
 </html>
