"Fixed typo in 'yourUsername' and updated HTML elements to match JavaScript code"

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -76,7 +76,7 @@
         <li class="nav-item ">
           <p></p>
           <h6 class="fw-medium text-primary-emphasis"> Account number: <br>
-            <span class="fw-light text-secondary-emphasis" id="account-number-sidebar">858967656757567</span>
+            <span class="fw-light text-secondary-emphasis" id="account-number-sidebar"></span>
             </h3>
         </li>
 
@@ -84,12 +84,12 @@
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
             <img src="assets/images/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2" id="yourUsername">           </span>
+            <span class="d-none d-md-block dropdown-toggle ps-2" id="yourEmail">           </span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6 id="yourEmail"></h6>
+              <h6 id="yourUsername"></h6>
               <span id="account-number-dropdown"></span>
             </li>
             <li>
