"Updated username display in dropdown menu from 'yourUsername' to 'yourName'"

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -89,7 +89,7 @@
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6 id="yourUsername"></h6>
+              <h6 id="yourName"></h6>
               <span id="account-number-dropdown"></span>
             </li>
             <li>
