"Updated script tags in various HTML files to reference page-specific JavaScript files instead of dashboard.js"

--- a/public/pages-accounts.html
+++ b/public/pages-accounts.html
@@ -31,7 +31,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <script type="module" src="assets/js/dashboard.js"></script>
+  <script type="module" src="assets/js/accounts.js"></script>
   <script type="module" src="assets/js/firebase.js"></script>
 
 </head>
