--- a/public/pages-transactions.html
+++ b/public/pages-transactions.html
@@ -29,7 +29,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <script type="module" src="assets/js/dashboard.js"></script>
+  <script type="module" src="assets/js/transactions.js"></script>
   <script type="module" src="assets/js/firebase.js"></script>
 </head>
 
