--- a/public/pages-contact.html
+++ b/public/pages-contact.html
@@ -28,7 +28,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <script type="module" src="assets/js/dashboard.js"></script>
+  <script type="module" src="assets/js/contact.js"></script>
   <script type="module" src="assets/js/firebase.js"></script>
 </head>
 
